k8s/network-policy.yaml
# Network Policy : file-service ne peut parler qu'à audit-service et postgres
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: file-service-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: file-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ingress-nginx
    ports:
    - protocol: TCP
      port: 5001
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - protocol: TCP
      port: 5432
  - to:
    - podSelector:
        matchLabels:
          app: audit-service
    ports:
    - protocol: TCP
      port: 5003
---
# Network Policy : project-service
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: project-service-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: project-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ingress-nginx
    ports:
    - protocol: TCP
      port: 5002
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - protocol: TCP
      port: 5432
  - to:
    - podSelector:
        matchLabels:
          app: audit-service
    ports:
    - protocol: TCP
      port: 5003
---
# Network Policy : audit-service (reçoit de tous, n'envoie qu'à postgres)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: audit-service-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: audit-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 5003
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - protocol: TCP
      port: 5432
